system-ui (1.1.7~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 14:50:27 +0300

system-ui (1.1.6-1) unstable; urgency=low

  * Fixes: NB#249391 - [TASK] Notifier improvement

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 14:49:50 +0300

system-ui (1.1.5-1) unstable; urgency=low

  * Fixes: NB#273060 - Connect charger to an already low battery sleeping device, show only charging notification when display turns on
  * Fixes: NB#262034 - Accessory connected sound played when disconnecting USB cable
  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 04 Aug 2011 17:16:33 +0300

system-ui (1.1.4-1) unstable; urgency=low

  * Fixes: NB#273889 - [TASK] Operator name should be replaced with "Emergency calls only" when in limited service state and there is a network available

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 03 Aug 2011 14:38:51 +0300

system-ui (1.1.3-1) unstable; urgency=low

  * Fixes: NB#272833 - [TASK] when the call is active and battery is low, alert user at every 2 min interval regardless of display states

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 02 Aug 2011 16:51:00 +0300

system-ui (1.1.2-1) unstable; urgency=low

  * Fixes: System banners should be prioritized over short event banners (a.k.a. notification previews)

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 28 Jul 2011 13:31:31 +0300

system-ui (1.1.1-1) unstable; urgency=low

  * Fixes: NB#272983 - Dismiss "Unplug charger..." notification immediately and show "Charging" when charger is plugged in
  * Fixes: NB#272626 - [TASK] proper indication of "battery low" state on status area

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 22 Jul 2011 12:09:56 +0300

system-ui (1.1.0-1) unstable; urgency=low

  * Fixes: NB#257758 - Updating a notification event type's iconId does not update notification group icons