@@ -551,26 +551,30 @@ void Ut_StatusIndicator::testPhoneNetwork_data() {
     QTest::addColumn<QString>("language");
     QTest::addColumn<QString>("extnetstring");
     QTest::addColumn<QString>("servicestatus");
+    QTest::addColumn<QString>("registrationstatus");
     QTest::addColumn<QVariant>("displayLimitedServiceState");
     QTest::addColumn<QString>("stylePostfix");
 
-    QTest::newRow("NoRoaming") << "F!o" << "F!o" << QString() << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("RoamingIdeal") << "foo (bar)" << "foo" << "bar" << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("MissingVisitor") << "F!o()" << "F!o" << QString() << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("MissingBoth") << QString() << QString() << QString() << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("HomeAndVisitorSame") << "foo (foo)" << "foo" << "foo" << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("NoStartDelimiter") << "foo bar)" << "foo bar)" << QString() << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("NoEndDelimiter") << "FoO(BaR1!" << "FoO" << QString() << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("RoamingExtraSpaces") << " f1o (bar) " << "f1o" << "bar" << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("RoamingExtraDelimiters") << "foo (()bar())" << "foo" << "()bar()" << "" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("ChineseLocale") << "foo" << "bar" << "" << "zh" << "bar" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("ChineseLocaleNoExtNetString") << "foo" << "foo" << "" << "zh" << "" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("ChineseLocaleVisitor") << "foo" << "bar" << "meh" << "zh" << "bar (meh)" << "full-service" << QVariant(true) << QString();
-    QTest::newRow("EmptyServiceStatus") << "F!o" << "F!o" << QString() << "" << "" << "" << QVariant(true) << QString();
-    QTest::newRow("NoCoverageServiceStatus") << "F!o" << "F!o" << QString() << "" << "" << "no-coverage" << QVariant(true) << QString();
-    QTest::newRow("LimitedServiceServiceStatusLimitedServiceStateDisplayEnabled") << "foo (bar)" << qtTrId("qtn_cell_emergency_calls_only") << QString() << "" << "" << "limited-service" << QVariant(true) << "LimitedService";
-    QTest::newRow("LimitedServiceServiceStatusLimitedServiceStateDisplayNotSet") << "foo (bar)" << qtTrId("qtn_cell_emergency_calls_only") << QString() << "" << "" << "limited-service" << QVariant() << "LimitedService";
-    QTest::newRow("LimitedServiceServiceStatusLimitedServiceStateDisplayDisabled") << "F!o" << "F!o" << QString() << "" << "" << "limited-service" << QVariant(false) << QString();
+    QTest::newRow("NoRoaming") << "F!o" << "F!o" << QString() << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("RoamingIdeal") << "foo (bar)" << "foo" << "bar" << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("MissingVisitor") << "F!o()" << "F!o" << QString() << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("MissingBoth") << QString() << QString() << QString() << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("HomeAndVisitorSame") << "foo (foo)" << "foo" << "foo" << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("NoStartDelimiter") << "foo bar)" << "foo bar)" << QString() << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("NoEndDelimiter") << "FoO(BaR1!" << "FoO" << QString() << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("RoamingExtraSpaces") << " f1o (bar) " << "f1o" << "bar" << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("RoamingExtraDelimiters") << "foo (()bar())" << "foo" << "()bar()" << "" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("ChineseLocale") << "foo" << "bar" << "" << "zh" << "bar" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("ChineseLocaleNoExtNetString") << "foo" << "foo" << "" << "zh" << "" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("ChineseLocaleVisitor") << "foo" << "bar" << "meh" << "zh" << "bar (meh)" << "full-service" << "home" << QVariant(true) << QString();
+    QTest::newRow("EmptyServiceStatus") << "F!o" << "F!o" << QString() << "" << "" << "" << "home" << QVariant(true) << QString();
+    QTest::newRow("LimitedServiceServiceStatusLimitedServiceStateDisplayEnabled") << "foo (bar)" << qtTrId("qtn_cell_emergency_calls_only") << QString() << "" << "" << "limited-service" << "home" << QVariant(true) << "LimitedService";
+    QTest::newRow("LimitedServiceServiceStatusLimitedServiceStateDisplayNotSet") << "foo (bar)" << qtTrId("qtn_cell_emergency_calls_only") << QString() << "" << "" << "limited-service" << "home" << QVariant() << "LimitedService";
+    QTest::newRow("LimitedServiceServiceStatusLimitedServiceStateDisplayDisabled") << "F!o" << "F!o" << QString() << "" << "" << "limited-service" << "home" << QVariant(false) << QString();
+    QTest::newRow("NoCoverageServiceStatusAndOfflineRegistrationStatus") << "F!o" << "F!o" << QString() << "" << "" << "no-coverage" << "offline" << QVariant(true) << QString();
+    QTest::newRow("NoCoverageServiceStatusAndOnlineRegistrationStatusLimitedServiceStateDisplayEnabled") << "foo (bar)" << qtTrId("qtn_stat_no_coverage") << QString() << "" << "" << "no-coverage" << "home" << QVariant(true) << "LimitedService";
+    QTest::newRow("NoCoverageServiceStatusAndOnlineRegistrationStatusLimitedServiceStateDisplayNotSet") << "foo (bar)" << qtTrId("qtn_stat_no_coverage") << QString() << "" << "" << "no-coverage" << "home" << QVariant() << "LimitedService";
+    QTest::newRow("NoCoverageServiceStatusAndOnlineRegistrationStatusLimitedServiceStateDisplayDisabled") << "F!o" << "F!o" << QString() << "" << "" << "no-coverage" << "home" << QVariant(false) << QString();
 }
 
 void Ut_StatusIndicator::testPhoneNetwork()
@@ -581,6 +585,7 @@ void Ut_StatusIndicator::testPhoneNetwork()
     QFETCH(QString, language);
     QFETCH(QString, extnetstring);
     QFETCH(QString, servicestatus);
+    QFETCH(QString, registrationstatus);
     QFETCH(QVariant, displayLimitedServiceState);
     QFETCH(QString, stylePostfix);
 
@@ -592,6 +597,7 @@ void Ut_StatusIndicator::testPhoneNetwork()
     testContextItems["Cellular.NetworkName"]->setValue(QVariant(netstring));
     testContextItems["Cellular.ExtendedNetworkName"]->setValue(QVariant(extnetstring));
     testContextItems["Cellular.ServiceStatus"]->setValue(QVariant(servicestatus));
+    testContextItems["Cellular.RegistrationStatus"]->setValue(QVariant(registrationstatus));
     PhoneNetworkStatusIndicator* indicator = qobject_cast<PhoneNetworkStatusIndicator*>(m_subject);
 
     // Check that the network change timer is connected
